Fix content overflow

--- a/src/components/Offline.astro
+++ b/src/components/Offline.astro
@@ -1,5 +1,4 @@
 ---
-
 ---
 
 <div id="container">
@@ -69,16 +68,13 @@
 		font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova",
 			"Nimbus Sans", Arial, sans-serif;
 		height: 100%;
-	}
-
-	main section {
-		height: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		max-width: 480px;
 		margin: 10svh auto 0 auto;
 		row-gap: 1rem;
+		padding: 1rem 1.5rem;
 	}
 
 	svg {
@@ -97,6 +93,7 @@
 		line-height: 24px;
 		letter-spacing: -0.006em;
 		margin: 0;
+		text-wrap: balance;
 	}
 
 	code {
@@ -112,19 +109,7 @@
 		display: block;
 		color: #2e90fa;
 		cursor: pointer;
+		font-weight: bold;
 		margin-top: 1rem;
-	}
-
-	@media screen and (max-height: 368px) {
-		#news {
-			display: none;
-		}
-	}
-
-	@media screen and (max-width: 768px) {
-		#container {
-			display: flex;
-			flex-direction: column;
-		}
 	}
 </style>
