--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,8 @@
 	html,
 	body {
 		margin: 0;
-		width: 100%;
-		height: 100%;
+		width: 100svw;
+		height: 100svh;
+		overflow: hidden;
 	}
 </style>
